--- a/package.json
+++ b/package.json
@@ -1,25 +1,19 @@
 {
-  "name": "brotas-beauty-backend",
+  "name": "beauty-backend",
   "version": "1.0.0",
   "description": "API para sistema de agendamentos da Brotas Beauty",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "dev": "nodemon index.js",
-    "start": "node index.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["agendamento", "beauty", "salon", "api"],
-  "author": "Brotas Beauty",
+  "keywords": ["agendamento", "beauty", "salon"],
+  "author": "joaodddev",
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "mongoose": "^7.5.0",
-    "nodemailer": "^6.9.7",
-    "express-validator": "^7.0.1",
-    "moment": "^2.29.4",
-    "helmet": "^7.0.0"
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
